# cost-aware-inference

./: .dockerignore  .gitignore  Dockerfile  README.md  REFERENCES.md  project.yaml  pyproject.toml
.aitmpl/: context-card.md
.github/workflows/: validate.yml
.portfolio-control/: CRITICAL_PATH.md  DECISIONS.md  INVENTORY.md  QUALITY_GATES.md
benchmarks/results/: cost-aware-baseline.json
data/fixtures/: providers.json  requests.jsonl
data/pricing/: providers.json
openspec/: config.yaml
openspec/artifacts/: architecture-record.md  article-draft.md  benchmark-proof.md  component-pack.md  intent.md  portfolio-impact.md  reuse-delta.md  tasks.md  verification.md  voice-check.md
openspec/changes/baseline/: design.md  proposal.md  tasks.md
openspec/changes/baseline/specs/cost-aware-inference/: spec.md
sdd/: agent-handoff.md  architecture-decision.md  benchmark-plan.md  reuse-improvement-review.md  spec.md  technical-decision.md
src/cost_aware_inference/: application.py  cli.py  domain.py  ports.py  pricing.py
src/cost_aware_inference/adapters/: __init__.py  local.py  openai_compatible.py
tests/: test_application.py  test_costs.py  test_http_provider.py  test_local_provider.py
tools/: validate-benchmark.py  validate-project.ps1  validate-runtime.py
