[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-aware-inference"
version = "0.1.0"
description = "Local-vs-API inference cost and latency comparison with deterministic provider fixtures."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cost-aware-inference = "cost_aware_inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
