[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-aware-inference"
version = "0.2.0"
description = "Observed local inference latency and token usage with explicit cost assumptions and optional HTTP adapters."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cost-aware-inference = "cost_aware_inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
